--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "node_modules/.bin/eslint src/*.{js,jsx} --fix",
-    "weather": "parcel ./src/index.html",
+    "app": "parcel ./src/index.html",
     "build": "rm -rf dist && parcel build ./src/index.html --public-url /To_do_list && cp ./dist/index.html ./dist/404.html",
     "deploy": "gh-pages -d dist"
   },
@@ -18,5 +18,19 @@
   "bugs": {
     "url": "https://github.com/BardAlexandrovskiy/To_do_list/issues"
   },
-  "homepage": "https://github.com/BardAlexandrovskiy/To_do_list#readme"
+  "homepage": "https://github.com/BardAlexandrovskiy/To_do_list#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "gh-pages": "^2.0.1",
+    "pre-commit": "^1.2.2",
+    "eslint-config-prettier": "^4.0.0"
+  },
+  "pre-commit": []
 }
