--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "gh-pages": "^2.0.1",
-    "pre-commit": "^1.2.2",
-    "eslint-config-prettier": "^4.0.0"
+    "parcel-plugin-sw-precache": "^1.1.1",
+    "pre-commit": "^1.2.2"
   },
   "pre-commit": []
 }
