--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "url": "https://github.com/BardAlexandrovskiy/To_do_list/issues"
   },
   "homepage": "https://github.com/BardAlexandrovskiy/To_do_list#readme",
-  "dependencies": {
-    "parcel-bundler": "^1.12.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "gh-pages": "^2.0.1",
+    "parcel-bundler": "^1.12.3",
     "parcel-plugin-sw-precache": "^1.1.1",
     "pre-commit": "^1.2.2"
   },
-  "pre-commit": []
+  "pre-commit": [
+    "lint"
+  ]
 }
