--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "TD",
   "theme_color": "rgb(199,194,233)",
   "background_color": "#2684d0",
-  "display": "standalone",
+  "display": "fullscreen",
   "start_url": "https://bardalexandrovskiy.github.io/To_do_list/",
   "icons": [
     {
